src/scss/style.scss
/* ... */
/* ------------- Custom Gutenberg Blocks ----------------------------------------------------------------------------------------------------------- */

/* ------------- Hero Block ---------------- */

.hero {
    display:flex;
    width:100vw;
    height:100vh;
   
    @include phone {
        flex-direction:column-reverse;
    }

    @include desktop-s {
        height:auto;
        min-height:100vh;
    }

   .breadcrumbs {
    font-size:$small-btn;
    text-transform: uppercase;
    color:$mediumgrey; 
    font-weight:400;
    margin:20px 0;
    
        a {
            color:$mediumgrey;  
            text-decoration:none;
            transition: color .5s ease;

            &:hover {
                color:$black;
                transition: color .5s ease;
            }
        }

        @include phone {
            .breadcrumb_last {
                display:none;
            }
        }

        @include desktop-s {
            .breadcrumb_last {
                display:none;
            }
        }
    }

    .subheader {
        font-size:var(--small-subtitle);
    }

   .text_wrap {
        width:33.33vw;
        //margin-top:10vh;
        padding:var(--vertical) var(--horizontal) var(--vertical) var(--horizontal);
        margin-top:200px;
        flex-direction: column;
        display: inline-flex;
        justify-content: center;

        @include phone {
            width:100vw;
            margin-top:0;
        }

        @include desktop-s {
            width:50vw;
        }
        
        .read_more_link {           
            @include textLink;         
        }

        .back_link {
            @include textLink;
            margin-bottom:20px;
            display:inline-block;
        }
        
   }

   .text_wrap.expo {

        .btn {
            margin-bottom:40px;
        }

        .date {
            display:flex; 
            
            svg {
                margin-top:8px;
                width:20px;
            }

            p {
                font-weight:600;
                font-size:var(--medium-p);
                margin-left:20px;
            }

        }

        .opening_hours {
            display:flex;

            svg {
                margin-top:8px;
                width:20px;
            }

            p {
                font-weight:300;
                font-size:var(--medium-p);
                margin-left:20px;
            }

        }

        .location {
            display:flex;

            svg {
                margin-top:8px;
                width:20px;
            }

            p {
                font-weight:300;
                font-size:var(--medium-p);
                margin-left:20px;
            }

        }

        .free_entry {
            display:flex;

            svg {
                margin-top:8px;
                width:20px;
            }

            p {
                font-weight:300;
                font-size:var(--medium-p);
                margin-left:20px;
            }

        }

   }

   .image_wrap {
        width:66.6vw;

        @include phone {
            width:100vw;
        }

        @include desktop-s {
            width:50vw;
        }
    
        img {
            width:66.6vw;

            @include phone {
                width:100vw;
                min-height:50vh;
            }
            
        }
    
    }

}

/* ------------- Styling specifically for the large text hero block ---------------- */

.hero.large_text {
    //align-items: center;

    @include phone {
        flex-direction: column;
    }

    .text_wrap {
        padding:var(--vertical) calc(var(--horizontal-xl) * 2) var(--vertical) var(--horizontal);
        width:66.66vw;
        overflow:hidden;

        @include phone {
            padding:var(--vertical) var(--horizontal);
            width:100vw;
        }

        @include desktop-s {
            width:50vw;
            padding:20vh var(--horizontal) var(--horizontal) var(--horizontal); 
        }

        .description {

            p:first-of-type {
                font-size:var(--small-subtitle);
                font-family: $header-font;
            }

        }

    }

    .image_wrap {
        width:33vw;
        display:flex;
        align-items: stretch; 
        overflow:hidden;      

        &:before {
            content:'';
            @include blackGradient(0deg);
            width:100%;
            display:block;
            height:40vh;
            bottom:0;
            position:absolute;
            z-index:10;
        }

        @include phone {
            width:100vw;
            min-height:calc(100vh - var(--mobile-btn-height));
        }

        @include desktop-s {
            width:50vw;
        }

        

        .content {
            position:absolute;
            bottom:0;
            padding:var(--vertical) var(--horizontal);
            z-index:100;
            margin:0;

            .mobile_logo {
                display:none;

                @include phone {
                    display:block;

                    svg {
                        width:65vw;
                        margin:0 auto 20px auto;
                        display:block;
    
                        path {
                            fill:$white;
                        }
                    }
                }
            }

            .header {
                font-size:calc(var(--x-large-title) * 1.1);
                color:$white;
                margin:0;
                    
                @include phone {
                    text-align:center;
                }
            }

        }

        .caption {
            display:none;
        }

    }

}

.hero.exhibition {

    .slider {
        max-height:100vh;
    }
    
    @include phone {

        .image_wrap {
            margin-top:var(--mobile-btn-height);
        }

    }
    
}
/* ... */

